# aidtm

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/iron-sight-inspection/: design.md  requirements.md  tasks.md
.kiro/specs/ironsight-command-center/: design.md  requirements.md  tasks.md
.kiro/steering/: tech_stack.md
config/: vehicle_detection.yaml
iron-sight/: main.py  pyproject.toml
ironsight_dashboard/: .env.example  .gitignore  Dockerfile  FIXES_APPLIED.md  GPU_SETUP_GUIDE.md  LAUNCHER_README.md  LIVE_PROCESSOR_README.md  NAFNET_FIXES_SUMMARY.md  NAFNET_REDS_UPDATE.md  QUICK_START.md  README.md  VIDEO_TROUBLESHOOTING.md  docker-compose.yml  example_usage.py  pyproject.toml  run_ironsight.bat  run_ironsight.ps1  run_ironsight.py  run_ironsight.sh  simple_test.py  test_fixes.py  test_imports.py  test_live_processor.py  test_nafnet_fixed.py  test_nafnet_mock.py  test_nafnet_reds.py  test_video_upload.py
ironsight_dashboard/config/: ironsight_config.yaml
ironsight_dashboard/demo_data/: __init__.py  benchmark_scenarios.py  demo_data_generator.py  generate_demo_data.py  mock_inspection_history.py
ironsight_dashboard/scripts/: start.bat  start.sh
ironsight_dashboard/src/: __init__.py  app.py  asset_discovery.py  config_manager.py  crop_first_nafnet.py  error_handler.py  gatekeeper_model.py  ironsight_engine.py  mission_control.py  mock_nafnet.py  model_optimizer.py  multi_yolo_detector.py  nafnet_fixed.py  nafnet_standalone.py  performance_monitor.py  restoration_lab.py  sci_enhancer.py  semantic_search_ui.py  siglip_integration.py  smolvlm_integration.py  spectral_processor.py
ironsight_dashboard/tests/: __init__.py  test_asset_discovery_properties.py  test_dashboard_properties.py  test_engine_properties.py  test_gatekeeper_properties.py  test_mission_control_properties.py  test_model_optimizer_properties.py  test_nafnet_properties.py  test_sci_properties.py  test_semantic_search_properties.py  test_yolo_properties.py
scripts/: prepare_zero_dce.py  train_deblur.py  train_gatekeeper.py  train_yolo.py  verify_checkpoint.py
src/: __init__.py  agent_forensic.py  analyze_validation.py  augment_gatekeeper.py  benchmark_deblur.py  data_combine.py  data_ingest.py  data_local.py  data_physics.py  demo_smolvlm_integration.py  gen_synthetic_data.py  integrate_gopro.py  map_datasets.py  math_gatekeeper.py  models.py  pipeline_core.py  preprocessor_sci.py  semantic_search.py  test_laplacian.py  train_gatekeeper_v2.py  visualize_results.py
tests/: test_inspection_result_properties.py
